# siod.py

./: README.md  pyproject.toml  siod.py
.github/workflows/: python-publish.yml
src/siod/: siod.py
src/siod.py/: __init__.py  main.py
