[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
dependencies = ["tkinter"]

[project]
name = "siod.py"
version = "0.1"
authors = [
  { name="Omer OZYILDIRIM", email="omerozyildirim@hotmail.com" },
]
description = "Simple input/output dialogs"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["UI", "dialog"]

[project.urls]
Source = "https://github.com/omerozyildirim/siod.py"
Issues = "https://github.com/omerozyildirim/siod.py/issues"