[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "siod"
version = "0.1"
authors = [
  { name="Omer OZYILDIRIM", email="omerozyildirim@hotmail.com" },
]
description = "Simple input/output dialogs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["UI", "dialog"]
dependencies = ["tkinter"]

[project.urls]
Source = "https://github.com/omerozyildirim/siod.py"
Issues = "https://github.com/omerozyildirim/siod.py/issues"